[gd_scene load_steps=3 format=3 uid="uid://br1w7x1hthgge"]

[ext_resource type="Script" path="res://scripts/save_slot_button.gd" id="1_slot_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_empty"]
bg_color = Color(0.2, 0.2, 0.25, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.4, 0.5, 1)

[node name="SaveSlotButton" type="PanelContainer"]
custom_minimum_size = Vector2(400, 180)
theme_override_styles/panel = SubResource("StyleBoxFlat_empty")
script = ExtResource("1_slot_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Thumbnail" type="TextureRect" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(256, 144)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="SlotLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Slot 1"

[node name="TimestampLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "01/15/2025 14:30"

[node name="ChapterLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Chapter 1 - Scene 3"

[node name="ScoreLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Level 5 | Score: 1250"

[node name="Spacer" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ActionButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(80, 35)
layout_mode = 2
text = "Save"

[node name="DeleteButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(80, 35)
layout_mode = 2
text = "Delete"

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/ButtonContainer/ActionButton" to="." method="_on_action_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/ButtonContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
